--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "preinstall": "rm -rf typings",
-    "postinstall": "node node_modules/typings/dist/bin.js install",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
@@ -15,6 +13,8 @@
     "testing": "jest --watch"
   },
   "dependencies": {
+    "@types/react": "^15.0.11",
+    "@types/react-native": "^0.37.12",
     "react": "~15.4.0",
     "react-native": "0.41.2"
   },
