--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
     "compilerOptions": {
-        "target": "es2015",
-        "module": "es2015",
+        "target": "es6",
+        "module": "es6",
         "jsx": "react",
-        "rootDir": "src",
         "outDir": "build",
         "allowSyntheticDefaultImports": true,
         "noImplicitAny": true,
+        "strictNullChecks": true,
         "experimentalDecorators": true,
         "preserveConstEnums": true,
         "allowJs": true,
         "sourceMap": true
     },
     "filesGlob": [
-        "typings/index.d.ts",
         "src/**/*.ts",
-        "src/**/*.tsx"
+        "src/**/*.tsx",
+        "__tests__/**/*.ts",
+        "__tests__/**/*.tsx"
     ],
     "exclude": [
         "./**/index.android.js",
