--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "testing": "yarn test -- --watch"
   },
   "dependencies": {
-    "@types/react": "~15.0.0",
-    "@types/react-native": "~0.37.0",
-    "react": "~15.4.0",
-    "react-native": "~0.41.0"
+    "@types/react": "^15.0.11",
+    "@types/react-native": "^0.37.13",
+    "react": "^15.4.2",
+    "react-native": "^0.41.2"
   },
   "devDependencies": {
-    "@types/jest": "~18.1.0",
-    "@types/react-test-renderer": "~15.4.0",
-    "babel-jest": "~19.0.0",
-    "babel-preset-react-native": "~1.9.0",
-    "jest": "~19.0.0",
-    "react-test-renderer": "~15.4.0",
-    "typescript": "~2.1.0"
+    "@types/jest": "^18.1.1",
+    "@types/react-test-renderer": "^15.4.2",
+    "babel-jest": "^19.0.0",
+    "babel-preset-react-native": "^1.9.1",
+    "jest": "^19.0.0",
+    "react-test-renderer": "^15.4.2",
+    "typescript": "^2.1.6"
   },
   "jest": {
     "preset": "react-native"
