--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es6",
         "module": "es6",
-        "jsx": "react",
+        "jsx": "react-native",
         "outDir": "build",
         "sourceRoot": "src",
         "allowSyntheticDefaultImports": true,
@@ -10,7 +10,6 @@
         "strictNullChecks": true,
         "experimentalDecorators": true,
         "preserveConstEnums": true,
-        "allowJs": true,
         "sourceMap": true,
         "declaration": true
     },
