update to using typescript jest presset

--- a/package.json
+++ b/package.json
@@ -25,26 +25,11 @@
     "babel-jest": "^19.0.0",
     "babel-preset-react-native": "^1.9.1",
     "jest": "^19.0.0",
+    "jest-preset-typescript-react-native": "^1.0.0",
     "react-test-renderer": "^15.4.2",
     "typescript": "^2.2.1"
   },
   "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "ts",
-      "tsx"
-    ],
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.(ts|tsx)$": "<rootDir>/preprocessor.js"
-    },
-    "testMatch": [
-      "**/__tests__/**/*.js?(x)",
-      "**/?(*.)(spec|test).js?(x)",
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)(spec|test).ts?(x)"
-    ]
+    "preset": "jest-preset-typescript-react-native"
   }
 }
